--- a/css/home1.css
+++ b/css/home1.css
@@ -8,7 +8,9 @@ body{
     margin: 20px 40px;
 }
 img{
-    margin:12px;
+    margin:20px;
+    padding-left: 7px;
+    
 }
 .order{
     background-color: black;
@@ -20,3 +22,31 @@ img{
     transition: 0.5s;
     border-radius:10px;
 }
+.img:hover{
+    border-radius: 20px 20px;
+    box-shadow: 20px 0px 20px 0px  gray;
+}
+.best-card{
+    color:black;
+    background-color:rgb(130, 102, 65);
+    width: 299px;
+    margin:17px;
+    padding: 20px 10px;
+    border-radius: 10px;
+    display:inline-block;
+    border: 3px solid #4d0026;
+    justify-content: center;
+    text-align: center;
+}
+
+   .food2-img{
+      height:150px;
+      width: 190px;
+      margin: 10px auto;
+      display: block;
+    
+   }
+   .best-card:hover{
+    transition: 1s;
+    box-shadow: 20px 0px 20px 0px black;
+   }
