--- a/css/home1.css
+++ b/css/home1.css
@@ -50,3 +50,10 @@ img{
     transition: 1s;
     box-shadow: 20px 0px 20px 0px black;
    }
+    .paragrap-text{
+        text-align: justify;
+        margin-top: 0px;
+        margin-right: 80px;
+        font-size: 20px;
+    }
+   
