--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,12 @@
     flex-direction:row;
     justify-content:center;
     display:flex;
-    }
+    align-items: center;
+    background-color:rgb(224, 157, 69);
+    color:rgb(79, 55, 24) ;
+    height: 100px;
+    border: 5px solid black;
+}
 .img2{
     height: 90px;
     color:black;
